re write .js to class

--- a/profile-calendar.html
+++ b/profile-calendar.html
@@ -57,10 +57,16 @@
 			</nav>
 		</div>
 		<div class="calendar-wrap">
-			<div class="calendar-month">
-				<i data-type="prev" class='calendar-month-prev bx bx-left-arrow'></i>
-				<div class="calendar-month-text"></div>
-				<i data-type="next" class='calendar-month-next bx bx-right-arrow'></i>
+			<div class="calendar-set">
+				<div class="calendar-month">
+					<i data-type="prev" class='calendar-month-prev bx bx-left-arrow'></i>
+					<div class="calendar-month-text"></div>
+					<i data-type="next" class='calendar-month-next bx bx-right-arrow'></i>
+				</div>
+				<div class="calendar-year">
+					<select name="calendar-year" id="year">
+					</select>
+				</div>
 			</div>
 			<div class="calendar-block">
 				<div class="calendar-week-day">Sun</div>
