--- a/profile-calendar.html
+++ b/profile-calendar.html
@@ -58,6 +58,12 @@
 		</div>
 		<div class="calendar-wrap">
 			<div class="calendar-set">
+				<div class="calendar-rate">
+					<input min="0" max="100" type="number" class="calendar-rate" name="calendar-rate">
+					<button class="rate-button">Prefill Rates</button>
+				</div>
+			</div>
+			<div class="calendar-set">
 				<div class="calendar-month">
 					<i data-type="prev" class='calendar-month-prev bx bx-left-arrow'></i>
 					<div class="calendar-month-text"></div>
@@ -85,6 +91,7 @@
 	</main>
 	<script src="js/profile.js"></script>
 	<script src="js/calendar.js"></script>
+	<script src="js/calendar_rate.js"></script>
 </body>
 
 </html>
