--- a/profile-calendar.html
+++ b/profile-calendar.html
@@ -59,7 +59,7 @@
 		<div class="calendar-wrap">
 			<div class="calendar-set">
 				<div class="calendar-rate">
-					<input min="0" max="100" type="number" class="calendar-rate" name="calendar-rate">
+					<input min="0" max="100" type="number" class="calendar-rate-input" name="calendar-rate">
 					<button class="rate-button">Prefill Rates</button>
 				</div>
 			</div>
@@ -86,6 +86,14 @@
 			<div class="calendar-block" id="calendar">
 
 
+			</div>
+			<div class="calendar-day-rate hide">
+				<div class="calendar-day-title"></div>
+				<span class="calendar-input-label">Commands</span>
+				<input type="number" min="0" max="3" class="calendar-input-commands">
+				<span class="calendar-input-label">Day Rate</span>
+				<input type="number" min="0" max="100" class="calendar-input-rate">
+				<button class="rate-button calendar-day-button">Save</button>
 			</div>
 		</div>
 	</main>
