--- a/order.html
+++ b/order.html
@@ -169,8 +169,9 @@
         </div>
         <div class="result-sticky-block">
             <div class="result-sticky-button">
-                <form name="writeOrderInDb" action="">
-                    <button type="submit">Book this move</button>
+                <form class="result-form" name="writeOrderInDb" action="">
+
+
                 </form>
 
             </div>
