--- a/profile-calendar.html
+++ b/profile-calendar.html
@@ -26,7 +26,7 @@
 						<i class='bx bxs-chevron-right'></i>
 					</div>
 					<ul class="nav__list">
-						<a href="profile-admin.php" class="nav__link">
+						<a href="profile-admin.html" class="nav__link">
 							<i class='bx bx-grid-alt nav__icon'></i>
 							<span class="nav__text">Home</span>
 						</a>
