--- a/profile-admin.html
+++ b/profile-admin.html
@@ -1,11 +1,4 @@
-<?php
-  		session_start();
-		  if($_COOKIE['aphash']==='333d76478fdcea1aea6faae6ee0cdd56'){
 
-		} else {
-			header('Location: /profile.php');
-		}
-?>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,6 +8,7 @@
 	<title>My profile</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/profile.css">
+	<link rel="stylesheet" href="css/orders.css">
 	<link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -61,9 +55,28 @@
 				</div>
 			</nav>
 		</div>
+		<div class="orders-wrap">
+			<h2 class="orders-header">Orders</h2>
+			<div class="orders-list">
+				<table class="orders-table">
+					<tr class="orders-table-tr">
+						<th>Order №</th>
+						<th>Name</th>
+						<th>Phone</th>
+						<th>Move Date</th>
+						<th>Distance</th>
+						<th>Volume</th>
+						<th>Price</th>
+						<th>Status</th>
+					</tr>
+				</table>
+
+			</div>
+		</div>
 	</main>
-	<script src="js/auth.js"></script>
 	<script src="js/profile.js"></script>
+	<script src="js/profile-admin.js"></script>
+
 </body>
 
 </html>
