update too current version

--- a/orderInfo.html
+++ b/orderInfo.html
@@ -23,12 +23,12 @@
                 </div>
                 <nav class="nav-menu">
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-                        <li class="nav-item"><a href="long-distance.html" class="nav-link">Long Distance</a></li>
-                        <li class="nav-item"><a href="local-move.html" class="nav-link">Local</a></li>
-                        <li class="nav-item"><a href="comercial.html" class="nav-link">Commercial Move</a></li>
-                        <li class="nav-item"><a href="pack-unpack.html" class="nav-link">Packing & Unpacking</a></li>
+                        <li class="nav-item"><a href="main" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="blog" class="nav-link">Blog</a></li>
+                        <li class="nav-item"><a href="longdistance" class="nav-link">Long Distance</a></li>
+                        <li class="nav-item"><a href="local" class="nav-link">Local</a></li>
+                        <li class="nav-item"><a href="commercial" class="nav-link">Commercial Move</a></li>
+                        <li class="nav-item"><a href="pack-unpack" class="nav-link">Packing & Unpacking</a></li>
                     </ul>
                 </nav>
             </div>
@@ -146,7 +146,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="result-estimate">
                 <div class="title-wrap">
                     <h2 class="result-title">Inventory & Boxes</h2>
@@ -171,8 +170,7 @@
         <div class="result-sticky-block">
             <div class="result-sticky-button">
                 <form class="result-form" name="writeOrderInDb" action="">
-
-
+                    <a href="/"><button class="editOrder" type="button">Edit</button></a>
                 </form>
 
             </div>
@@ -181,7 +179,7 @@
 </main>
 
 </body>
-<script src="js/auth.js"></script>
-<script src="js/result.js"></script>
+<script src="/js/auth.js"></script>
+<script src="/js/orderInfo.js"></script>
 
 </html>
