--- a/profile-admin.html
+++ b/profile-admin.html
@@ -57,6 +57,16 @@
 		</div>
 		<div class="orders-wrap">
 			<h2 class="orders-header">Orders</h2>
+			<div class="filter-orders">
+				<input data-value="All" name="filter" class="filter" checked id="filter-all" type="radio">
+				<label class="filter-label" for="filter-all">All</label>
+				<input data-value="New" name="filter" class="filter" id="filter-new" type="radio">
+				<label class="filter-label" for="filter-new">New</label>
+				<input data-value="Accepted" name="filter" class="filter" id="filter-accepted" type="radio">
+				<label class="filter-label" for="filter-accepted">Accepted</label>
+				<input data-value="Completed" name="filter" class="filter" id="filter-completed" type="radio">
+				<label class="filter-label" for="filter-completed">Completed</label>
+			</div>
 			<div class="orders-list">
 				<table class="orders-table">
 					<tr class="orders-table-tr">
