--- a/order.html
+++ b/order.html
@@ -13,7 +13,6 @@
 
 
 <body>
-
 <header class="site-header">
     <div class="header-wrap">
         <div class="container">
@@ -171,8 +170,7 @@
         <div class="result-sticky-block">
             <div class="result-sticky-button">
                 <form class="result-form" name="writeOrderInDb" action="">
-
-
+                    <button class="saveOrder" type="submit">Book</button>
                 </form>
 
             </div>
