--- a/profile-admin.html
+++ b/profile-admin.html
@@ -9,11 +9,19 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/profile.css">
 	<link rel="stylesheet" href="css/orders.css">
+	<link type="text/css" rel="stylesheet" href="css/header.css">
 	<link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body id="body">
 	<main>
+		<div class="header">
+			<div class="menu__icon icon-menu">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+		</div>
 		<div class="l-navbar" id="navbar">
 			<nav class="nav">
 				<div>
@@ -86,6 +94,7 @@
 	</main>
 	<script src="js/profile.js"></script>
 	<script src="js/profile-admin.js"></script>
+	<script src="js/header__menu.js"></script>
 
 </body>
 
