--- a/profile-calendar.html
+++ b/profile-calendar.html
@@ -83,17 +83,19 @@
 				<div class="calendar-week-day">Fri</div>
 				<div class="calendar-week-day">Sat</div>
 			</div>
-			<div class="calendar-block" id="calendar">
+			<div class="calendar-block-wraper">
+				<div class="calendar-block" id="calendar">
 
 
-			</div>
-			<div class="calendar-day-rate hide">
-				<div class="calendar-day-title"></div>
-				<span class="calendar-input-label">Commands</span>
-				<input type="number" min="0" max="3" class="calendar-input-commands">
-				<span class="calendar-input-label">Day Rate</span>
-				<input type="number" min="0" max="100" class="calendar-input-rate">
-				<button class="rate-button calendar-day-button">Save</button>
+				</div>
+				<div class="calendar-day-rate hide">
+					<div class="calendar-day-title"></div>
+					<span class="calendar-input-label">Commands</span>
+					<input type="number" min="0" max="3" class="calendar-input-commands">
+					<span class="calendar-input-label">Day Rate</span>
+					<input type="number" min="0" max="100" class="calendar-input-rate">
+					<button class="rate-button calendar-day-button">Save</button>
+				</div>
 			</div>
 		</div>
 	</main>
