--- a/index34434.html
+++ b/index34434.html
@@ -30,6 +30,11 @@
 					<div class="header-logo">
 						<a href="#"><img src="img/logo.png" alt=""></a>
 					</div>
+					<div class="menu__icon icon-menu">
+						<span></span>
+						<span></span>
+						<span></span>
+					</div>
 					<div class="header-nav-wrap">
 						<nav class="nav-menu">
 							<ul class="nav-list">
@@ -851,6 +856,10 @@
 							</div>
 						</div>
 					</div>
+			<div class="width-wrap image-block">
+				<img src="img/block1.jpg" alt="">
+				<img src="img/block2.jpg" alt="">
+			</div>
 					<div class="services">
 						<div class="width-wrap">
 							<div class="services-head">
@@ -859,7 +868,8 @@
 							</div>
 							<div class="services-blocks">
 								<div class="services-block">
-									<div class="services-img"><svg class="services-svg" enable-background="new 0 0 64 64"
+									<div class="services-img">
+										<svg class="services-svg" enable-background="new 0 0 64 64"
 											viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
 											<g>
 												<path
@@ -946,26 +956,9 @@
 									NJ LIC.# 39PM00113300</p>
 							</div>
 						</div>
+						
 					</div>
-
-
-
-
-
-					<!--            <div class="choice-wrap">-->
-					<!--                <div class="width-wrap">-->
-					<!--                    <div class="choice-list">-->
-					<!--                        <div class="choice-head">-->
-					<!--                            <img class="about-icon" src="img/title-img.png" alt="">-->
-					<!--                            <div class="about-title">Why Choose Us</div>-->
-					<!--                        </div>-->
-					<!--                        <div class="about-subtitle">We Have 25 Years Of Experience Give You Better Results</div>-->
-					<!--                        -->
-					<!--                    </div>-->
-					<!--                </div>-->
-					<!--                <img class="app-img" src="img/app-img.png"  alt="">-->
-					<!--            </div>-->
-
+			
 					<footer class="long-footer">
 						<div class="footer-container">
 							<div class="footer-col">
@@ -1196,7 +1189,7 @@
 									<a href="about-us.html" class="footer-item-text phone">More About Us</a>
 								</div>
 							</div>
-							<div class="footer-col footer-contact">
+							<div class="footer-col footer-contact contact-us">
 								<h2 class="footer-title">Contact Us</h2>
 								<form name="contactForm" action="">
 									<div class="footer-item">
@@ -1222,7 +1215,7 @@
 						</div>
 						<div class="vmodal" id="vmodal">
 							<div class="modal-overlay" data-close="true">
-								<div class="modal-window" style="width: 400px">
+								<div class="modal-window">
 									<div class="modal-header">
 										<span class="modal-title">Get your confirmation</span>
 										<span class="modal-close" data-close="true">&times;</span>
@@ -1273,11 +1266,13 @@
 							</div>
 						</div>
 					</footer>
+			
 		</main>
 	</div>
 	<script src="js/calendar-small.js"></script>
 	<script src="js/auth.js"></script>
 	<script src="js/script.js"></script>
+	<script src="js/header__menu.js"></script>
 	<!--    <script src="js/calculator.js"></script>-->
 	<!--    <script-->
 	<!--            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwWXleWh8d8A2lS2TbRAqqGp5-HLKyTh4&libraries=places&callback=initAutocomplete"-->
