edit block with radio packing

--- a/index.html
+++ b/index.html
@@ -779,6 +779,7 @@
 						</li>
 						<li class="sidebar-item boxes">
 							<div data-name="Boxes" class="sidebar-content">
+								<span id="PackBoxes" class="pack__counter">0</span>
 								<svg class="sidebar-img" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
 									viewBox="0 0 50 50"> >
 									<path fill="#C2976A" d="M9.565 17.932l-2.424-5.768 17.292-1.224 2.367 5.215z" />
